--- a/templates/login.html
+++ b/templates/login.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-
+  <form method="post">
+    {% csrf_token %}
+    {{ form }}
+    <button>Log In</button>
+  </form>
 {% endblock %}
